--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 LICENSE.meta
 README.md.meta
 
+*.asset
+
 # This .gitignore file should be placed at the root of your Unity project directory
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
