Improved base settings

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ LICENSE.meta
 README.md.meta
 
 *.asset
+*.asset.meta
 
 # This .gitignore file should be placed at the root of your Unity project directory
 #
